<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nameAndIDShow"
        android:id="@+id/nameAndIDShow"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nameHere"
        android:id="@+id/nameHere"
        android:layout_below="@+id/nameAndIDShow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#ff000000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameText"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/nameHere"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/IDHere"
        android:id="@+id/IDHere"
        android:layout_below="@+id/nameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textColor="#ff000000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/IDText"
        android:layout_below="@+id/IDHere"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkNameAndID"
        android:id="@+id/checkNameAndID"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/IDText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setNameAndID"
        android:id="@+id/setNameAndID"
        android:layout_below="@+id/checkNameAndID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</RelativeLayout>